@@ -15,17 +15,19 @@
  */
 package com.intellij.execution.process;
 
+import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.ReflectionUtil;
 import com.sun.jna.Pointer;
 import com.sun.jna.platform.win32.Kernel32;
 import com.sun.jna.platform.win32.WinNT;
 
-import java.io.IOException;
-
 /**
  * @author Alexey.Ushakov
  */
 public class WinProcessManager {
+  private static final Logger LOG = Logger.getInstance(WinProcessManager.class);
 
   private WinProcessManager() {}
 
@@ -57,8 +59,40 @@ public class WinProcessManager {
    * @param process Windows process
    * @param tree true to also kill all subprocesses
    */
-  public static void kill(Process process, boolean tree) throws IOException, InterruptedException {
-    int pid = getProcessPid(process);
-    Runtime.getRuntime().exec("taskkill /PID " + pid + (tree ? " /t" : "") + " /f").waitFor();
+  public static boolean kill(Process process, boolean tree) {
+    try {
+      int pid = getProcessPid(process);
+      String[] cmdArray = {"taskkill", "/f", "/pid", String.valueOf(pid), tree ? "/t" : ""};
+      if (LOG.isDebugEnabled()) {
+        LOG.debug(StringUtil.join(cmdArray, " "));
+      }
+      Process p = new ProcessBuilder(cmdArray).redirectErrorStream(true).start();
+      String output = FileUtil.loadTextAndClose(p.getInputStream());
+      int res = p.waitFor();
+
+      if (res != 0 && isAlive(process)) {
+        LOG.warn(StringUtil.join(cmdArray, " ") + " failed: " + output);
+        return false;
+      }
+      else if (LOG.isDebugEnabled()) {
+        LOG.debug(output);
+      }
+
+      return true;
+    }
+    catch (Exception e) {
+      LOG.warn(e);
+    }
+    return false;
+  }
+
+  // todo replace with Process.isAlive when available (in 1.8)
+  private static boolean isAlive(Process process) {
+    try {
+      process.exitValue();
+      return false;
+    } catch(IllegalThreadStateException e) {
+      return true;
+    }
   }
 }
